      functionality is now provided by other driver libraries.
    - Changed the minimum required Linux kernel version from 2.6.32 to 3.10.
    - Updated nvidia.ko to load even if no supported NVIDIA GPUs are present
      when an NVIDIA NVSwitch device is detected in the system. Previously,
      nvidia.ko would fail to load into the kernel if no supported GPUs were
      present.

  [ Luca Boccassi ]
  * Update nv-readme.ids.
  * Drop libnvidia-ifr1 package, removed upstream.
  * Drop libnvidia-cbl package, removed upstream.
  * Update symbols files.

  [ Andreas Beckmann ]
  * libcuda1: Add Provides: libcuda-11.5-1{,-i386}.
  * Ship the gsp.bin firmware blob on arm64.

 -- Andreas Beckmann <anbe@debian.org>  Tue, 19 Oct 2021 23:08:37 +0200

nvidia-graphics-drivers (470.82.01-1) UNRELEASED; urgency=medium

  * New upstream Tesla release 470.82.01 (2021-11-02).
    - Fixed a regression which prevented DisplayPort and HDMI 2.1 variable
      refresh rate (VRR) G-SYNC Compatible monitors from functioning correctly
      in variable refresh rate mode, resulting in issues such as flickering.

 -- Andreas Beckmann <anbe@debian.org>  Wed, 03 Nov 2021 10:50:27 +0100

nvidia-graphics-drivers (470.82.00-1) unstable; urgency=medium

  * New upstream production branch release 470.82.00 (2021-10-26).
    - Added support for the following GPUs: Matrox D-Series D2450,
      Matrox D-Series D2480, NVIDIA A2.
    - Fixed a bug that can cause a kernel crash in SLI Mosaic configurations.
    - Added support for the EGL_NV_robustness_video_memory_purge extension

  [ Andreas Beckmann ]
  * Refresh patches.
  * bug-script: Show the nvidia and glx alternatives.
  * nvidia-alternative: libnvidia-cfg.so.1 on its own is not
    sufficient to activate a nvidia alternative.  (Closes: #996595)
  * Fix bashisms in upstream scripts.
  * Drop the unusable leftover non-GLVND libegl1-nvidia package.
    (Closes: #996763)
  * nvidia-alternative: Drop unused non-GLVND slave links.