@@ -1,6 +1,3 @@
 This version only supports GeForce, NVS, Quadro, RTX, Tesla, ... GPUs based on
-the Kepler (desktop cards only), Maxwell, Pascal, Volta, Turing, Ampere or
-newer architectures.
-The (Tesla) 470 drivers are the last driver series supporting GPUs based on
-the Kepler architecture.
-Look at the legacy driver packages for older cards.
+the Maxwell, Pascal, Volta, Turing, Ampere or newer architectures.
+Look at the legacy driver or Tesla driver packages for older cards.
