@@ -16,177 +16,89 @@ set -e
 
 . /usr/share/debconf/confmodule
 
-LEGACY_DRIVER="nvidia-legacy-390xx-driver"
+LEGACY_DRIVER="nvidia-tesla-470-driver"
 LEGACY_PCIIDS="
-10DE06C0
-10DE06C4
-10DE06CA
-10DE06CD
-10DE06D1
-10DE06D2
-10DE06D8
-10DE06D9
-10DE06DA
-10DE06DC
-10DE06DD
-10DE06DE
-10DE06DF
-10DE0DC0
-10DE0DC4
-10DE0DC5
-10DE0DC6
-10DE0DCD
-10DE0DCE
-10DE0DD1
-10DE0DD2
-10DE0DD3
-10DE0DD6
-10DE0DD8
-10DE0DDA
-10DE0DE0
-10DE0DE1
-10DE0DE2
-10DE0DE3
-10DE0DE4
-10DE0DE5
-10DE0DE7
-10DE0DE8
-10DE0DE9
-10DE0DEA
-10DE0DEB
-10DE0DEC
-10DE0DED
-10DE0DEE
-10DE0DEF
-10DE0DF0
-10DE0DF1
-10DE0DF2
-10DE0DF3
-10DE0DF4
-10DE0DF5
-10DE0DF6
-10DE0DF7
-10DE0DF8
-10DE0DF9
-10DE0DFA
-10DE0DFC
-10DE0E22
-10DE0E23
-10DE0E24
-10DE0E30
-10DE0E31
-10DE0E3A
-10DE0E3B
-10DE0F00
-10DE0F01
-10DE0F02
-10DE0F03
-10DE1040
-10DE1042
-10DE1048
-10DE1049
-10DE104A
-10DE104B
-10DE104C
-10DE1050
-10DE1051
-10DE1052
-10DE1054
-10DE1055
-10DE1056
-10DE1057
-10DE1058
-10DE1059
-10DE105A
-10DE105B
-10DE107C
-10DE107D
-10DE1080
-10DE1081
-10DE1082
-10DE1084
-10DE1086
-10DE1087
-10DE1088
-10DE1089
-10DE108B
-10DE1091
-10DE1094
-10DE1096
-10DE109A
-10DE109B
-10DE1140
-10DE1200
-10DE1201
-10DE1203
-10DE1205
-10DE1206
-10DE1207
-10DE1208
-10DE1210
-10DE1211
-10DE1212
-10DE1213
-10DE1241
-10DE1243
-10DE1244
-10DE1245
-10DE1246
-10DE1247
-10DE1248
-10DE1249
-10DE124B
-10DE124D
-10DE1251
-10DE0FCD
-10DE0FCE
-10DE0FD1
-10DE0FD3
-10DE0FD4
-10DE0FD5
-10DE0FD8
-10DE0FD9
-10DE0FDF
-10DE0FE0
-10DE0FE1
-10DE0FE2
-10DE0FE4
-10DE0FE9
-10DE0FEA
-10DE0FEC
-10DE0FED
-10DE0FEE
-10DE0FF6
-10DE0FF8
-10DE0FFB
-10DE0FFC
-10DE1198
-10DE119A
-10DE119D
-10DE119E
-10DE119F
-10DE11A0
-10DE11A1
-10DE11A2
-10DE11A3
-10DE11A7
-10DE11B6
-10DE11B7
-10DE11B8
-10DE11BC
-10DE11BD
-10DE11BE
-10DE11E0
-10DE11E1
-10DE11E2
-10DE11FC
-10DE1291
-10DE1293
-10DE1296
-10DE1298
-10DE129A
-10DE12B9
-10DE12BA
+10DE0FC0
+10DE0FC1
+10DE0FC2
+10DE0FC6
+10DE0FC8
+10DE0FC9
+10DE0FD2
+10DE0FE3
+10DE0FF3
+10DE0FF9
+10DE0FFA
+10DE0FFD
+10DE0FFE
+10DE0FFF
+10DE1001
+10DE1004
+10DE1005
+10DE1007
+10DE1008
+10DE100A
+10DE100C
+10DE1021
+10DE1022
+10DE1023
+10DE1024
+10DE1026
+10DE1027
+10DE1028
+10DE1029
+10DE102A
+10DE102D
+10DE103A
+10DE103C
+10DE1180
+10DE1183
+10DE1184
+10DE1185
+10DE1187
+10DE1188
+10DE1189
+10DE118A
+10DE118E
+10DE118F
+10DE1193
+10DE1194
+10DE1195
+10DE1199
+10DE11B4
+10DE11BA
+10DE11C0
+10DE11C2
+10DE11C3
+10DE11C4
+10DE11C5
+10DE11C6
+10DE11C8
+10DE11CB
+10DE11E3
+10DE11FA
+10DE1280
+10DE1281
+10DE1282
+10DE1284
+10DE1286
+10DE1287
+10DE1288
+10DE1289
+10DE128B
+10DE1290
+10DE1292
+10DE1295
+10DE1299
+10DE137D
+10DE1BB3
+10DE1DF5
+10DE1EB4
+10DE1EB8
+10DE1F09
+10DE20B1
+10DE20F0
+10DE20F2
 "
 
 if [ "$DEBUG_NVIDIA_LEGACY_CHECK" = "yes" ]; then
